--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+    - name: List runner info
+      run: sw_vers && arch
     - name: Show current version of Xcode
       run: xcodebuild -version
     - name: Run tests
