make release builds on build server

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,11 @@ jobs:
       run: xcodebuild -version
     - name: Run tests
       run: ./run_tests.sh
+      
+  build-release:
+    name: Build release
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Build
+      run: ./build_release.sh
